<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/task_fragment"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    tools:context="com.jnelsonjava.taskmaster.TaskFragment">

    <!-- Done: Update blank fragment layout -->

    <TextView
        android:id="@+id/taskTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_title_fragment_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/taskBodyTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskBodyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_body_fragment_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/taskStateTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/taskTitleTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskStateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_state_fragment_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/taskBodyTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskFilekeyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:layout_marginTop="12dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>