...
        android:layout_marginTop="24dp"
        android:text="@string/attach_file"
        app:layout_constraintStart_toStartOf="@+id/taskTeamTextView"
        app:layout_constraintTop_toBottomOf="@+id/userTeamAssignmentRadioGroup" />

    <Button
        android:id="@+id/add_task_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/add_task_button_text"
        app:layout_constraintStart_toStartOf="@+id/selectedFileText"
        app:layout_constraintTop_toBottomOf="@+id/selectedFileText" />

    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/do_something_placeholder_description"
...
    <TextView
        android:id="@+id/taskBodyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/task_description_add_task_form"
        app:layout_constraintStart_toStartOf="@+id/editTextTaskTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskTitle" />

    <TextView
        android:id="@+id/taskTeamTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
